[tool.poetry]
name = "papersfetcher"
version = "0.1.0"
description = "Fetch PubMed papers with non-academic authors"
authors = [" Darshan M <darshankm2003@gmail.com>"]
readme = "README.md"
packages = [{ include = "papersfetcher" }]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"

[tool.poetry.scripts]
get-papers-list = "papersfetcher.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
